# mnemnk-application

./: .gitignore  Cargo.toml  README.md  mnemnk.json  mnemnk.mac.json  mnemnk.win.json
.github/workflows/: publish.yml
src/: main.rs
