[package]
name = "mnemnk-application"
version = "0.1.0"
description = "Mnemnk agent for monitoring application usage"
authors = ["Akira Ishino <akira@lumilab.jp>"]
edition = "2021"

[dependencies]
active-win-pos-rs = "0.9.0"
anyhow = "1.0.95"
chrono = "0.4.39"
clap = { version = "4.5.28", features = ["derive"] }
env_logger = "0.11.6"
log = "0.4.25"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["full"] }
