[package]
name = "mnemnk-application"
version = "0.5.0"
description = "Mnemnk agent for monitoring application usage"
authors = ["Akira Ishino <akira@lumilab.jp>"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/mnemnk/mnemnk-application"
license = "MIT"

[[bin]]
name = "mnemnk-application"
path = "src/main.rs"
test = false
bench = false

[dependencies]
active-win-pos-rs = "0.9.0"
anyhow = "1.0.95"
chrono = "0.4.39"
clap = { version = "4.5.28", features = ["derive"] }
env_logger = "0.11.6"
log = "0.4.25"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["full"] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26.0"
objc = "0.2.7"

[target.'cfg(target_os = "macos")'.build-dependencies]
bindgen = "0.68.1"

[features]
cargo-clippy = []
